src/test/deca/context/invalid/SansObjet/DeclVar-And-boolean-float-float.deca
// Description:
//    Declaration of a boolean variable using && operation between a float variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  0.1; 
    float y = 3.14; 
    boolean z = 0.1 && 3.14; 
}
